<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/blue">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textTitle"
        android:textAlignment="center"
        android:textSize="@dimen/textFont"
        android:textColor="@color/purple1"/>

    <!--Student Name-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullName"
            android:textColor="@color/purple1"
            android:textSize="@dimen/textFont" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editName"
            android:text="@string/textName"
            android:inputType="textPersonName" />
    </LinearLayout>

    <!--Student Address-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/purple1"
            android:textSize="@dimen/textFont" />

        <EditText
            android:id="@+id/editAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editAddress"
            android:inputType="textPostalAddress"
            android:text="@string/textAddress" />
    </LinearLayout>

    <!--Student Profession-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textProfession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profession"
            android:textColor="@color/purple1"
            android:textSize="@dimen/textFont" />

        <EditText
            android:id="@+id/editProfession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editProfession"
            android:inputType="text"
            android:text="@string/textProfession" />

    </LinearLayout>

    <!--Student Job-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textJob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dreamJob"
            android:textColor="@color/purple1"
            android:textSize="@dimen/textFont" />

        <EditText
            android:id="@+id/editJob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editJobAndFood"
            android:inputType="text"
            android:text="@string/textJob" />
    </LinearLayout>

    <!--Student Food-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favoriteFood"
            android:textColor="@color/purple1"
            android:textSize="@dimen/textFont" />

        <EditText
            android:id="@+id/editFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editJobAndFood"
            android:inputType="text"
            android:text="@string/textFood" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="showMessage"
        android:text="@string/button" />

</LinearLayout>