<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NextActivity"
    android:background="@color/pink">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textTitle_next"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/textFont"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullName"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/textFont" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullName"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/textFont"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/textFont" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/textFont" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profession"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/textFont" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profession"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/textFont" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dreamJob"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/textFont" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dreamJob"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/textFont" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favoriteFood"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/textFont" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favoriteFood"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/textFont" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>